correction contraste

--- a/style.css
+++ b/style.css
@@ -772,7 +772,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 1);
+    background-color: #3E413A;
     padding: 40px 40px 40px 40px;
 }
 
